--- a/index.html
+++ b/index.html
@@ -7,12 +7,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- 欢迎图片 -->
     <div id="image-container">
-        <img id="welcome-image" src="images/girl.gif" alt="欢迎图片">
+        <img id="welcome-image" src="images/Scene1.gif" alt="欢迎图片">
     </div>
+
+    <!-- 欢迎文字 -->
     <div id="welcome-message" class="hidden">
         欢迎来到我的私人空间！
     </div>
+
+    <!-- 按钮容器 -->
+    <div id="button-container" class="hidden">
+        <button id="button1">image1</button>
+        <button id="button2">image2</button>
+        <button id="button3">image3</button>
+    </div>
+
+    <!-- 图片显示容器 -->
+    <div id="image-display" class="hidden">
+        <img id="displayed-image" src="" alt="显示的图片">
+    </div>
+
+    <!-- JavaScript 文件 -->
     <script src="script.js"></script>
 </body>
 </html>
